--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     },
     "dependencies": {
         "@majidh1/jalalidatepicker": "^0.6.0",
+        "apexcharts": "^3.35.4",
         "ha-datetimepicker": "^1.3.0",
         "persian-datepicker": "^1.2.0",
-        "sweetalert2": "^11.4.24"
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.4.26"
     }
 }
